Add title for ts/th es/eh plot

--- a/NNSoft.ipynb
+++ b/NNSoft.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:39d64d7e4c202e37a8a26810c5a9194bb17ea2051e497fb559e8f2532735af50"
+  "signature": "sha256:ec497c754799bcc2103e80ee2e91e85c0f3af852f9dd26b7d6c6513866ecbdb0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -238,6 +238,14 @@
       }
      ],
      "prompt_number": 27
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "TS-ES = Train on Soft, Evaluate on Soft\n",
+      "TH-EH = Train on Hard, Evaluate on Hard"
+     ]
     },
     {
      "cell_type": "code",
