Add value comparisons

--- a/NNSoft clarified.ipynb
+++ b/NNSoft clarified.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:eeae368549188bb4bf513eac8568d0141575fdf6daaa46d235120ba69b9d648a"
+  "signature": "sha256:e45447b0e8cd84e49899bf170af610454713ea6488f9f9e588ee33e91b5d80bc"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -30815,6 +30815,69 @@
       }
      ],
      "prompt_number": 71
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "###Values comparison"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "np.set_printoptions(suppress=True, precision=8)\n",
+      "model.predict(X_test)[10:15]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 83,
+       "text": [
+        "array([[ 0.11329897,  0.77367723,  0.01473319,  0.09829053],\n",
+        "       [ 0.03749961,  0.03329423,  0.48880765,  0.44039845],\n",
+        "       [ 0.2435649 ,  0.64607465,  0.03062076,  0.0797397 ],\n",
+        "       [ 0.0504998 ,  0.03532584,  0.53463882,  0.37953553],\n",
+        "       [ 0.80065447,  0.12857796,  0.06102918,  0.00973837]], dtype=float32)"
+       ]
+      }
+     ],
+     "prompt_number": 83
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print y_test_soft[10:15]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[[ 0.117245  0.777755  0.013755  0.091245]\n",
+        " [ 0.002605  0.002395  0.518395  0.476605]\n",
+        " [ 0.282013  0.618987  0.030987  0.068013]\n",
+        " [ 0.025515  0.019485  0.541485  0.413515]\n",
+        " [ 0.849588  0.146412  0.003412  0.000588]]\n"
+       ]
+      }
+     ],
+     "prompt_number": 84
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
